# ros2_tsuchida_first

new_message/: CMakeLists.txt  package.xml
new_message/launch/: new_message.launch.py
new_message/msg/: Tsuchida.msg
new_message/srv/: Ningen.srv
new_message/urdf/: two_wheeled_robot.urdf
py_pubsub/: package.xml  setup.py
py_pubsub/py_pubsub/: publisher_member_function.py  subscriber.py
service_tutoral/: CMakeLists.txt  package.xml
service_tutoral/scripts/: hajime_client.py  hajime_server.py
service_tutoral/src/: hajime_client.cpp  hajime_server.cpp
urdf_tutorial/launch/: display.launch.py
